<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigActivity" >

    <!--
             ***********************************
             *  ACTIVAR/DESACTIVAR  SERVICIO   *
             ***********************************
    -->

    <LinearLayout
        android:id="@+id/LinearLayoutServicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color_ON"
        android:paddingBottom="4dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="4dp" >

        <ImageView
            android:id="@+id/imageViewMiniLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginRight="8dp"
            android:src="@drawable/mini_logo_shakeme"/>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_weight="2"
            android:text="@string/app_name"
            android:textColor="@color/text_color_blanco"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/toggleButtonServicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginLeft="16dp"
            android:textOff="OFF"
            android:textOn="ON" />
    </LinearLayout>

    <!-- Esta Vista dibuja una línea en el UI -->

    <View
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:background="#555555" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/LinearLayoutScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!--
             **********************
             *  CONFIGURAR  VOZ   *
             **********************
                -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:contentDescription="@string/content_description_text2Voz"
                        android:src="@drawable/text2voz" />

                    <CheckBox
                        android:id="@+id/checkBoxVoz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/config_activar_voz"
                        android:textSize="20sp" />
                </LinearLayout>

                <!-- Esta Vista dibuja una línea en el UI -->

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#555555" />

                <!--
                 ********************
	             *  AGITAME PARA... *
	             ********************
                -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:contentDescription="@string/content_description_logo"
                        android:src="@drawable/shakemode" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="2"
                        android:text="@string/config_agitame_para"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/radioGroupAgitarPara"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <RadioButton
                            android:id="@+id/radioButtonColgar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/call_stop_mini"
                            android:text="@string/config_colgar"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/radioButtonContestar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/call_start_mini"
                            android:text="@string/config_contestar"
                            android:textSize="18sp" />
                    </RadioGroup>
                </LinearLayout>

                <!-- Activar/Desactivar Modo Altavoz Manos libres (Hands-free Speakerphone Mode) -->

                <LinearLayout
                    android:id="@+id/layoutAltavoz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/redondear"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:visibility="gone" >

                    <CheckBox
                        android:id="@+id/checkBoxAltavoz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/activity_horizontal_margin"
                        android:drawableRight="@drawable/manos_libres_on"
                        android:text="@string/config_activar_altavoz" />
                </LinearLayout>

                <!-- Esta Vista dibuja una línea en el UI -->

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#555555" />

                <!--
                 ****************
	             *    SENSOR    *
	             ****************
                -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:contentDescription="@string/content_description_sensor"
                        android:src="@drawable/calibrar_sensor" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="@string/config_sensor"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textViewValorSensor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="8dp"
                            android:text="current level: 1.0 Gs"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="#B565AF" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin" >

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/config_min" />

                    <SeekBar
                        android:id="@+id/seekBarCalibrarSensor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:max="8" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/config_max" />
                </LinearLayout>

                <!--
                 ******************
	             *   TEST SENSOR  *
	             ******************
                -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="#F5EAFA"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/config_test"
                        android:textSize="20sp" />

                    <ProgressBar
                        android:id="@+id/progressBarTestSensor"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:max="8" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/maxAceleration" />

                        <TextView
                            android:id="@+id/maxAcceleration"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:singleLine="true"
                            android:textIsSelectable="false"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/button1"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:onClick="onClickReset"
                        android:text="@string/config_reset" />
                </LinearLayout>

                <!-- Esta Vista dibuja una línea en el UI -->

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="#555555" />

                <!--
                 ****************************
                 *  AUMENTAR COMPATIBILIDAD *
                 ****************************
                -->

                <LinearLayout
                    android:id="@+id/layoutCompatible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/redondear_precaucion"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

                    <CheckBox
                        android:id="@+id/checkBoxCompatible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/activity_horizontal_margin"
                        android:drawableRight="@drawable/compatible"
                        android:text="@string/config_compatible" />
                </LinearLayout>
            </LinearLayout>

            <!-- Esta Vista dibuja una línea en el UI -->

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="#555555" />

            <!--
                 ****************************
                 *      GUARDAR Y SALIR     *
                 ****************************
            -->

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@android:drawable/ic_menu_save"
                android:onClick="onClickSaveAndExit"
                android:text="@string/config_salir" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>